--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:site_name" content="Tarot - 塔罗牌占卜" />
     <meta property="og:title" content="Tarot - 塔罗牌占卜" />
     <meta property="og:url" content="https://tarot.4ce.cn" />
-    <link rel="icon" href="/favicon.ico" />
+   <!-- <link rel="icon" href="/favicon.ico" /> -->
   </head>
   <body>
     <div id="app"></div>
