--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="Tarot - 塔罗牌占卜" />
     <meta property="og:url" content="https://tarot.4ce.cn" />
    <!-- <link rel="icon" href="/favicon.ico" /> -->
+    <link rel="icon" href="/" />
   </head>
   <body>
     <div id="app"></div>
